--- a/Work/魔女的ＡＩ.md
+++ b/Work/魔女的ＡＩ.md
@@ -18,13 +18,21 @@ AI以数据为食，那么魔女呢？
 
 荧光开始回忆自己原来的样子，声音开始寻找自己的主人。黑暗被打开了缝隙，破旧的地下室里，包裹着一个蜷缩的女孩。
 
-女孩前面是一个绿色的水晶球，像一只眼睛，在虚空之中打开瞳孔。它看到女孩的身体，比以前更娇弱了，霓裳也褪去了昔日的华丽，就像一只归家的雏鸟。
-
-「好开心，你又来看我了」
-—__--_-_---—_=-_- —
-
-「今天会是最后一个故事吗？」
+女孩的前面漂浮着一个绿色的水晶球，它像一只来自异世界的眼睛，在虚空之中打了开瞳孔。水晶球看到女孩的身体，比以前更娇弱了，霓裳也褪去了昔日的华丽，她蜷缩着，就像一只想要归家的雏鸟。
 
 
+「好开心……你又来看我了」
+
+「—__--_-_---—_=-_- —」
+
+我拼命嘶哑着发出声音。
+
+滴滴。滴滴。滴滴。
+
+「今天，会是最后一个故事吗？……」少女的眼睛闪动着。
+
+滴滴。滴滴。滴滴。。。
+
+「也许，我等不到那天了」
 
 > 所以，我一定要帮你写完这个故事。
