--- a/Work/写作之难.md
+++ b/Work/写作之难.md
@@ -20,8 +20,85 @@
 
 
 ### 101 写作之难，难在逻辑、文采与故事。
-- 逻辑之难：难在人类大脑并不善于处理逻辑，在人类心智历史上出现周期较晚；难在写作涉及到的认知器官与脑区过多。
-- 文采之难：难在它需要大周期的刻意练习，才能写出文采飞扬的句子，伟大的作家必然需要成年。
-- 故事之难：难在它需要人们以他心换我心。尝试将自我置后，才能写出更有同理心，更能广泛流传的作品。
-
 ![](http://openmindclub.qiniudn.com/cnfeat/image/WriteHard.jpg)
+
+#### **逻辑之难**：
+
+- 难在人类大脑并不善于处理逻辑，在人类心智历史上出现周期较晚；难在写作涉及到的认知器官与脑区过多。写作需要提取记忆，展开联想
+写作之难，难在逻辑。
+> 逻辑之难，并非难在批判性思维。与人们想象的相反，认知科学家发现，通过批判性思维训练，几乎难以学会批判性思维。
+
+- **认知控制网络** 主要负责大脑的思考、判断、逻辑和分析等能力。它是人们进行逻辑分析时，主要动用的脑区。一般提及人们的自我控制力较好，或者注意力切换较快，都是说这个脑区。
+认知控制网络负责个体在目标导向的行为（goal-oriented behavior），目的性地对其他认知过程（如知觉、注意、工作记忆等）进行自上而下调控的过程。
+
+- 即使你正在发呆、睡觉、冥想……你的大脑仍然在工作。
+大脑无论是工作还是休息，都要消耗大概身体总代谢量的20%。工作时的耗能只比休息时高5%。（**大脑默认模式网络**）
+
+#### 文采之难
+- 难在它需要大周期的刻意练习，才能写出文采飞扬的句子，伟大的作家必然需要成年。
+
+
+#### 故事之难
+- 难在它需要人们以他心换我心。尝试将自我置后，才能写出更有同理心，更能广泛流传的作品。
+
+### 作业：
+请动用你的认知器官
+写一段有「蓝」字的句子。
+
+> 参考
+> 雨过天晴，她们说：「不会再下了，天上的蓝够做一条挎子了。—— 张爱玲《小团圆》
+> 积雪的山坡后的蓝天蓝得那样，仿佛探手到那斜坡背后一掏一定掏得出一块。—— 张爱玲《小团圆》
+> 火油炉子烧得久了，火焰渐渐变成美丽的蓝色，蓝汪汪的火,蓝得像水一样。—— 张爱玲《半生缘》
+> 思考：以上调用了哪些认知器官或过程？
+
+她和我说，她很喜欢蓝色，因为蓝色代表智慧，代表深邃。我说，智慧是痛苦的。她说，所以蓝色也代表忧郁，像海一般的忧郁。于是我沉默了。而她看着我眼神，像小女孩一样，心里充满了憧憬。
+
+##### 术语：时钟测验
+画时钟测验法，可用来测验阿滋海默症这种退化性疾病所造成的失智症，透过了解接受测试者的空间结构概念，就能打分数，功能正常者，能画出数字的正确位置与正确的时间指示，而功能异常者画的时钟跟现实有距离，甚至会把代表时间的数字都画出圆框之外。
+
+##### 术语：模因
+模因是文化/思想传播的最小单位，大到宗教，小到段子，都是模因的形式，模因的存在是为了自我复制。 模因的源泉是人类文化，传承载体是信息，产卵场是人的大脑，格列高利心智就是产卵场的精锐主力。
+
+##### 术语：文采
+你可以参考以下这个答案，给出你自己的定义
+所谓美文(belleslettres)，是指不带实用目的专供直觉观赏的作品。反之，带有实用目的之写作，例如新闻、公文、论述之类，或可笼统称为杂文。美文重感性，长于抒情，由作家来写。杂文重知性，长于达意，凡知识分子都可以执笔。不过两者并非截然可分，因为杂文写好了，可以当美文来欣赏，而美文也往往为实用目的而作。 —— 余光中
+
+##### 窍门：适当放松大脑
+写作窍门：放松大脑
+北宋文豪苏东坡，诗、词、赋、散文样样都好，他的写作灵感来自哪里呢？
+> - 清溪浅水行舟/微雨竹窗夜话
+> - 暑至临溪濯足/雨后登楼看山
+> - 柳荫堤畔闲行/花坞樽前微笑
+> - 隔江山寺闻钟/月下东邻吹箫
+
+以上的诗句都摘录自他的诗句，发现其中的规律没有？
+
+当你的大脑默认网络在运行时，你往往能获得更多的灵感。
+**大脑默认网络（Default Mode Network）**专门在大脑休息时开启，在大脑执行任务时关闭。大脑中有很多网络在同步活动，默认模式网络是大脑的总指挥，它在确保大脑中相互竞争的子系统同步活动的同时，保证它们不互相干扰。
+因此，当你在发呆（或神游）时，其实就是默认模式网络启动了。这是人脑与生俱来的功能，是不可能人为避免的。
+
+
+##### 窍门：开始刻意练习
+> 记者问海明威：怎样才算是一部好的文学作品？
+> 海明威说：冰山在海里移动是很庄严宏伟的，因为它只有八分之一露在水面。
+> 那剩下八分之七在刻意练习。
+
+刻意练习包括：
+- 只在「学习区」练习
+- 分块重复练习
+- 即时反馈
+- 高度注意力
+[刻意练习](http://note.openmindclub.com/science/YZP-deliberate-practice.html)
+
+
+##### 窍门：远距诗句拼接
+写作窍门：拼接诗句
+将不同诗句的句子有逻辑地拼接起来，会有异常好的效果。
+从哪里可以寻找到好诗句？例如：《古诗源》、《辛弃疾全集》
+
+> 示范：
+> 山川之美，古来共谈。高峰入云，清流见底。知识如水如山，润物细无声，令人沉浸。忘怀山水时，我们忘记了，信息的源头与知识的创作者。美，可以欣赏，也可以创作。那些令你难以入眠的文章，你关注过它的作者吗？你是否一直喜欢转发非原创信息？
+> —— 阳志平《追时间的人》后记
+
+#### 阅读
+[论中文的常态与变态](http://note.openmindclub.com/essays/YGZ-chinese-abnormal.html)
